app-pay.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-pay
  labels:
    app: app-pay
spec:
  template:
    metadata:
      labels:
        app: app-pay
    spec:
      containers:
        - name: app-pay
          image: restaurant-payment:1.0.0
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 200m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
  selector:
    matchLabels:
      app: app-pay
  replicas: 2
