postgres-pay.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-pay
spec:
  serviceName: postgres-pay
  replicas: 1
  selector:
    matchLabels:
      app: postgres-pay
  template:
    metadata:
      labels:
        app: postgres-pay
    spec:
      terminationGracePeriodSeconds: 30
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            # - name: postgres-data
            #   mountPath: /var/lib/postgresql/data
            - name: init-script
              mountPath: /docker-entrypoint-initdb.d/init.sql
              subPath: init.sql
      volumes:
        - name: init-script
          configMap:
            name: postgres-pay-init
            items:
              - key: init.sql
                path: init.sql
  # volumeClaimTemplates:
  #   - metadata:
  #       name: postgres-data
  #     spec:
  #       accessModes: ["ReadWriteOnce"]
  #       resources:
  #         requests:
  #           storage: 1Gi
