app-pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-pay
spec:
  type: LoadBalancer
  selector:
    app: app-pay
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
