mongo-pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-pay
spec:
  type: ClusterIP
  selector:
    app: mongo-pay
  ports:
    - port: 27017
      targetPort: 27017
      name: mongo-pay
