postgres-pay-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-pay
  labels:
    app: postgres-pay
spec:
  type: ClusterIP
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
  selector:
    app: postgres-pay
